--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,17 +4,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" type="image/svg" href="./static/img/biothings-explorer.svg" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         p {
             font-size: 1.2rem
         }
+        body {
+            position: relative;
+        }
+        #main {
+            margin-left:2%
+        }
+
+        #navbar-example3 {
+            max-height: 500px
+        }
     </style>
-    <title>Hello, world!</title>
+    <title>BioThings Explorer</title>
   </head>
-  <body>
+  <body >
     <div class="header">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="#">
@@ -37,28 +47,102 @@
     
     <div class="container">
         <div class="row">
-            <div id="list-example" class="col-2 list-group">
-                <a class="list-group-item list-group-item-action" href="#overview">Overview</a>
-                <a class="list-group-item list-group-item-action" href="#architecture">Architecture</a>
-                <a class="list-group-item list-group-item-action" href="#translate">Translate User Query</a>
-                <a class="list-group-item list-group-item-action" href="#normalize">Normalize API Response</a>
-            </div>
-            <div data-spy="scroll" data-target="#list-example" data-offset="0" class="col-10 scrollspy-example">
-                <h2 id="overview">Overview</h2>
-                <p>BioThings Explorer is an ongoing project supported by <a href="https://ncats.nih.gov/translator" target="_blank">the NCATS Data Translator project</a> that integrates and connects a variety of biomedical information from different resources to help researchers generate new ideas for preventing, diagnosing and treating diseases. Questions you could ask BioThings Explorer to answer includes: <b>“What drugs might be used to treat NGLY1-deficiency?”</b>, <b>“What is the mechanism for imatinib's effect on asthma?”</b>.</p>
-                <h2 id="architecture">Architecture</h2>
-                <img src="./static/img/bte_architecture.png">
-                <h3>A distributed system</h3>
-                <p>Most data integration efforts are based on building centralized data resources. These efforts typically involve building resource-specific data ingestion parsers, the outputs of which are assembled into knowledge graphs and loaded into a local database.</p>
-                <p>BioThings Explorer takes a different and complementary approach to data integration, focusing on a distributed network of knowledge providers connected by web application programming interfaces (APIs). </p>
-                <p>Relative to centralized solutions, the approach BioThings Explorer took offers several advantages. First, the API ecosystem is easily extensible by the community since there is no gatekeeper controlling access to a centralized resource. The results and scope of the BTE system will continuously and automatically improve as the community-maintained registry of API components continues to grow. Second, the data retrieved are always up-to-date with the source and not dependent on having a frequent synchronization schedule. Third, the distributed model is more scalable to heavy usage since the BTE client is run on each user's own computing infrastructure, so there is no centralized component that would be a single point of failure.</p>
-                <h2 id="translate">Translate User Query Into API Call(s)</h2>
-                <ul>Step 1: Which API(s) should be utilized to answer the user query?</ul>
-                <img src="./static/img/undirected_graph_bte.png" style="width:100%"">
-                <p>BioThings Explorer maintains a meta-knowledge graph (meta-KG) that describes compatibility of inputs and outputs between each API. </p>
-                <p>When a user asks questions like “What drugs might be used to treat NGLY1-deficiency?”. BioThings Explorer will look through the meta-KG and finds all APIs which could connect from DiseaseOrPhenotypicFeature to ChemicalSubstance. That’s leads to 4 APIs currently integrated in BioThings Explorer, including COHD, Mydisease.info, Semmed and MyChem.info.</p>
-                <h2 id="normalize">Normalize API Response</h2>
-                <p>...</p>
+            <nav id="navbar-example3" class="navbar navbar-light bg-light">
+                <nav class="nav nav-pills flex-column">
+                    <a class="nav-link" href="#intro">Introduction</a>
+                    <a class="nav-link" href="#plan">Project plan</a>
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link ml-3 my-1" href="#query-path-plan">Query Path Planning</a>
+                        <a class="nav-link ml-3 my-1" href="#query-path-execute">Query Path Execution</a>
+                        <a class="nav-link ml-3 my-1" href="#query-summarization">Query Summarization & Filtering</a>
+                    </nav>
+                    <a class="nav-link" href="#demo">Jupyter Notebook Demo</a>
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link ml-3 my-1" href="#predict">Predict</a>
+                        <a class="nav-link ml-3 my-1" href="#explain">Explain</a>
+                    </nav>
+                    <a class="nav-link" href="#future">Future Vision</a>
+                </nav>
+            </nav>
+                    
+            <div id="main" data-spy="scroll" data-target="#navbar-example3" data-offset="0" style="width:60%">
+                <h4 id="intro">Introduction</h4>
+                <p>BioThings Explorer(BTE) is an engine for autonomously querying a distributed knowledge graph. The distributed knowledge graph is made up of biomedical APIs that have been annotated with semantically-precise descriptions of their inputs and outputs. The knowledge graph is currently comprised by the APIs in this figure</p>
+                <div class="card text-center" style="width: 100%">
+                    <h5 class="card-header">Figure 1. BioThings Explorer Meta Knowledge Graph </h5>
+                    <img class="card-img-top" src="./static/img/bte_metagraph.png" alt="BioThings Explorer Meta Knowledge Graph">
+                </div>
+                <br>
+                <p>Using the Meta-KG, BTE automatically chains together queries spanning multiple APIs and assembling results, thereby organizing independently-created and -maintained APIs into a cohesive distributed knowledge graph (Distributed-KG). BTE proceeds in three steps: query path planning, query path execution, and summarization/filtering/ranking.</p>
+                <div class="card text-center" style="width: 100%">
+                    <h5 class="card-header">Figure 2. Schematic overview of the BioThings Explorer </h5>
+                    <img class="card-img-top" src="./static/img/bte_overview.png" alt="BioThings Explorer Meta Knowledge Graph">
+                </div>
+                <hr>
+                
+                <h4 id="plan">Project Plan</h4>
+                <p><br>The BTE system will continue to focus on autonomously answering two classes of queries by deconstructing them and relaying the components to distributed Knowledge Providers.<br>
+                   The first type of query is <b>predict</b>, it seeks to find relationships between one specific entity and a class of entity types. 
+                   An example of <b>predict</b> query" is:</p>
+                   <blockquote>What drugs might be used to treat NGLY1-deficiency?
+                    </blockquote>
+                   <p>The second type of query is <b>explain</b>, which seeks to explain the relationship between two specific entities. An example of <b>explain</b> query is:</p>
+                   <blockquote>What is the mechanism for imatinib's effect on asthma?
+                    </blockquote>
+                   <p>Both query types – <b>predict</b> and <b>explain</b> – are processed in three distinct phases.
+                </p><br>
+                <hr>
+                <h5 id="query-path-plan">Phase 1: Query Path Planning</h5>
+                <p><br>When a user query is provided, BTE will first perform query path planning. Both query types can be generalized to a common query template (which in these examples asks for all the ways in which Diseases can be connected to Drugs). </p>
+                <p>In <b>Step #1</b>, BTE queries the Meta-KG for all the entity types that can join Diseases and Drugs. (For simplicity, this example restricts paths one intermediate node, but query paths can theoretically be of any length. This simplified example also does not specify predicates describing how entities are related, but those can also be incorporated into the query template as filters.) </p>
+                <p>If, for example, we then focus on the Disease - Gene - Drug query metapath, <b>Step #2</b> would then make a second query on the Meta-KG, returning the specific APIs that report Disease - Gene relationships and the specific APIs that report Gene - Drug relationships. The output of this process is a query path plan (highlighted in red), which indicates which sequence of API calls can generate results that match the original query template. (Figure 3)
+                    </p><br>
+                <div class="card text-center" style="width: 100%">
+                    <h5 class="card-header">Figure 3. Query Path Planning in BioThings Explorer. </h5>
+                    <img class="card-img-top" src="./static/img/query_path_plan.svg" alt="Query Path Planning">
+                </div>
+                <br>
+                <hr>
+                <h5 id="query-path-execute">Phase 2: Query Path Execution</h5>
+                <p><br>In the second query path execution phase, BTE programmatically and autonomously executes the query path plan (Figure 4). </p>
+                <p>Here, BTE uses the semantic API annotations in the meta-KG to call each API with the appropriate inputs, and to map the API output to the Translator-standard <a href="https://biolink.github.io/biolink-model/" >Biolink Model</a>. </p>
+                <p>Moreover, BTE performs <b>ID-to-object translation</b>, which facilitates API chaining when one APIs output shares the same semantic type as another API's input (e.g., "gene"), but differs by the specific identifiers used (e.g., Entrez Gene vs Ensembl). </p><br>
+                <div class="card text-center" style="width: 100%">
+                    <h5 class="card-header">Figure 4. Query Path Execution in BioThings Explorer. </h5>
+                    <img class="card-img-top" src="./static/img/query_path_execute.png" alt="Query Path Planning">
+                </div>
+                <br>
+                <hr>
+                <h5 id="query-summarization">Phase 3: Query Summarization & Filtering</h5>
+                <p><br>The third phase of BTE query execution involves summarization, filtering, and ranking. The examples shown in Figures 3 and 4 were chosen for their simplicity to illustrate BTE's technical approach. But actual user queries are likely to be more complex and to involve longer query metapaths. The BTE approach and infrastructure will scale just fine. But especially as the number and size of Knowledge Providers grows, there will be an exponential growth in the number of returned paths, easily numbering in the thousands (or even more). BTE must provide users tools to effectively manage those results. 
+                </p><br>
+                <p>Summarization, filtering and ranking are essential to scalable execution of BTE. Figure 5 illustrates the simplest prioritization strategy based on node and edge properties. In addition, we will describe in the milestones other approaches for ranking paths based on metrics of confidence, novelty, and/or biological plausibility. We will also introduce on new innovative approach for evaluating paths based on co-occurrence of entities within published pathway figures. Our co-PI Alex Pico (UCSF/Gladstone) developed a pipeline for performing optical character recognition (OCR) followed by named entity recognition (NER) within published figures (see <a href="https://www.biorxiv.org/content/10.1101/379446v1" target="_blank">paper</a>). Here, we will explore the expansion and use of this approach to prioritize paths returned by BTE. 
+                    </p>
+                <div class="card text-center" style="width: 100%">
+                    <h5 class="card-header">Figure 5. Query summarization and filtering in BioThings Explorer. </h5>
+                    <img class="card-img-top" src="./static/img/query_summary.svg" alt="Query Path Planning">
+                </div>
+                <br>
+                <hr>
+                <h4 id="demo">Jupyter Notebook Demo</h4>
+                <p>Proof-of-concept implementations of BTE are now available. (Note: Please follow the installation instructions <a href="https://github.com/biothings/biothings_explorer/tree/master/jupyter%20notebooks" target="_blank">here</a> if you would like to run these notebooks.)</p>.
+                <br>
+                <h5 id="predict">Predict</h5>
+                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/What%20drugs%20might%20be%20used%20to%20treat%20hyperphenylalaninemia%3F.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Predict"</b> tasks. The notebook aims at finding <b>DRUGS</b> that are associated with <b>GENES</b> which invovled in <b>HPYERPHENYLALANINEMIA (disease)</b></p>
+                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/biothings/bte_schema/master/jupyter%20notebooks/What%20drugs%20might%20be%20used%20to%20treat%20hyperphenylalaninemia.html" frameborder="0" allowfullscreen></iframe> 
+                <br>
+                <hr>
+                <br>
+                <h5 id="explain">Explain</h5>
+                <br>
+                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/What%20is%20the%20mechanism%20for%20imatinib's%20effect%20on%20asthma.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Explain"</b> tasks. The notebook aims at finding the underlying mechanism that  <b>IMATINIB (drug)</b> can be used to treat <b>ASTHMA (disease)</b></p>
+                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/biothings/bte_schema/master/jupyter%20notebooks/What%20is%20the%20mechanism%20for%20imatinib%27s%20effect%20on%20asthma.html" frameborder="0" allowfullscreen></iframe> 
+                
+                <br>
+                <hr>
+                <h4 id="future">Future Vision</h4>
+                <br>
+                <script src="https://gist.github.com/andrewsu/a9c713505fe66692f6c9547dba0f0a32.js"></script>
             </div>
         </div>
     </div>
