--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/svg" href="./static/img/biothings-explorer.svg" />
+    <link rel="shortcut icon" type="image/svg" href="./static/img/biothings-explorer.ico" />
+    <LINK REL="SHORTCUT ICON"
+       HREF="./static/img/biothings-explorer.ico" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
