--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -130,15 +130,15 @@
                 <p>Proof-of-concept implementations of BTE are now available. (Note: Please follow the installation instructions <a href="https://github.com/biothings/biothings_explorer/tree/master/jupyter%20notebooks" target="_blank">here</a> if you would like to run these notebooks.)</p>.
                 <br>
                 <h5 id="predict">Predict</h5>
-                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/What%20drugs%20might%20be%20used%20to%20treat%20hyperphenylalaninemia%3F.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Predict"</b> tasks. The notebook aims at finding <b>DRUGS</b> that are associated with <b>GENES</b> which invovled in <b>HPYERPHENYLALANINEMIA (disease)</b></p>
-                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/biothings/bte_schema/master/jupyter%20notebooks/What%20drugs%20might%20be%20used%20to%20treat%20hyperphenylalaninemia.html" frameborder="0" allowfullscreen></iframe> 
+                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/PREDICT_demo.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Predict"</b> tasks. The notebook aims at finding <b>DRUGS</b> that are associated with <b>GENES</b> which invovled in <b>HPYERPHENYLALANINEMIA (disease)</b></p>
+                <iframe width="100%" height="700" src="http://bit.ly/bte_PREDICT" frameborder="0" allowfullscreen></iframe> 
                 <br>
                 <hr>
                 <br>
                 <h5 id="explain">Explain</h5>
                 <br>
-                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/What%20is%20the%20mechanism%20for%20imatinib's%20effect%20on%20asthma.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Explain"</b> tasks. The notebook aims at finding the underlying mechanism that  <b>IMATINIB (drug)</b> can be used to treat <b>ASTHMA (disease)</b></p>
-                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/biothings/bte_schema/master/jupyter%20notebooks/What%20is%20the%20mechanism%20for%20imatinib%27s%20effect%20on%20asthma.html" frameborder="0" allowfullscreen></iframe> 
+                <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/EXPLAIN_demo.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Explain"</b> tasks. The notebook aims at finding the underlying mechanism that  <b>IMATINIB (drug)</b> can be used to treat <b>ASTHMA (disease)</b></p>
+                <iframe width="100%" height="700" src="http://bit.ly/bte_EXPLAIN" frameborder="0" allowfullscreen></iframe> 
                 
                 <br>
                 <hr>
