--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -131,14 +131,14 @@
                 <br>
                 <h5 id="predict">Predict</h5>
                 <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/PREDICT_demo.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Predict"</b> tasks. The notebook aims at finding <b>DRUGS</b> that are associated with <b>GENES</b> which invovled in <b>HPYERPHENYLALANINEMIA (disease)</b></p>
-                <iframe width="100%" height="700" src="http://bit.ly/bte_PREDICT" frameborder="0" allowfullscreen></iframe> 
+                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/PREDICT_demo.html" frameborder="0" allowfullscreen></iframe> 
                 <br>
                 <hr>
                 <br>
                 <h5 id="explain">Explain</h5>
                 <br>
                 <p>Below is a jupyter notebook demo (<a href="https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/EXPLAIN_demo.ipynb" target="_blank">link</a>) of how BTE could be used to perform the <b>"Explain"</b> tasks. The notebook aims at finding the underlying mechanism that  <b>IMATINIB (drug)</b> can be used to treat <b>ASTHMA (disease)</b></p>
-                <iframe width="100%" height="700" src="http://bit.ly/bte_EXPLAIN" frameborder="0" allowfullscreen></iframe> 
+                <iframe width="100%" height="700" src="https://htmlpreview.github.io/?https://github.com/biothings/biothings_explorer/blob/master/jupyter%20notebooks/EXPLAIN_demo.html" frameborder="0" allowfullscreen></iframe> 
                 
                 <br>
                 <hr>
