update image link

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -123,7 +123,7 @@
                     </p>
                 <div class="card text-center" style="width: 100%">
                     <h5 class="card-header">Figure 5. Query summarization and filtering in BioThings Explorer. </h5>
-                    <img class="card-img-top" src="./static/img/query_summary.svg" alt="Query Path Planning">
+                    <img class="card-img-top" src="./static/img/query_summary.png" alt="Query Path Planning">
                 </div>
                 <br>
                 <hr>
